--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1110,7 +1110,9 @@ object {
     .home .learn-about-story .front-learn h1 {
       margin: 0;
       padding-bottom: .5rem;
-      text-align: center; }
+      text-align: center;
+      height: 70px;
+      overflow: hidden; }
     .home .learn-about-story .front-learn .m-button {
       text-decoration: none;
       color: #000000;
@@ -1220,6 +1222,8 @@ object {
         align-items: flex-start; }
     .home .program-event-post .front-program:hover, .home .program-event-post .front-program:active, .home .program-event-post .front-program:focus {
       border: 2px #000000 solid 4px; }
+    .home .program-event-post .front-program h1:hover, .home .program-event-post .front-program h1:active, .home .program-event-post .front-program h1:focus {
+      color: #ffffff; }
     .home .program-event-post .front-program .m-button {
       text-decoration: none;
       color: #000000;
@@ -1251,11 +1255,14 @@ object {
     .home .program-event-post .front-program a {
       margin: 0; }
     .home .program-event-post .front-program .m-button p:hover, .home .program-event-post .front-program .m-button p:active, .home .program-event-post .front-program .m-button p:focus {
-      background: #45cdcb;
-      color: #ffffff; }
+      background: #ffffff;
+      color: #f5a623; }
     .home .program-event-post .front-program p {
       display: none;
       padding: 0 60px; }
+    @media screen and (min-width: 1024px) {
+      .home .program-event-post .front-program p {
+        display: inline-block; } }
     @media screen and (min-width: 480px) {
       .home .program-event-post .front-program {
         width: 53%;
@@ -1264,12 +1271,10 @@ object {
             flex-flow: column nowrap;
         -ms-flex-pack: start;
             justify-content: flex-start; }
-        .home .program-event-post .front-program p {
-          display: inline-block; }
         .home .program-event-post .front-program a {
           padding-left: 60px;
-          -ms-flex-pack: start;
-              justify-content: flex-start; } }
+          -ms-flex-pack: center;
+              justify-content: center; } }
   @media screen and (min-width: 480px) {
     .home .program-event-post .intro-event-blog {
       display: -ms-flexbox;
@@ -1284,6 +1289,8 @@ object {
     background: #45cdcb; }
     .home .program-event-post .intro-event-blog .front-events:hover, .home .program-event-post .intro-event-blog .front-events:active, .home .program-event-post .intro-event-blog .front-events:focus {
       border: 2px #000000 solid 4px; }
+      .home .program-event-post .intro-event-blog .front-events:hover h1, .home .program-event-post .intro-event-blog .front-events:active h1, .home .program-event-post .intro-event-blog .front-events:focus h1 {
+        color: #ffffff; }
     @media screen and (min-width: 480px) {
       .home .program-event-post .intro-event-blog .front-events {
         width: 100%;
@@ -1294,6 +1301,8 @@ object {
     background: #ffffff; }
     .home .program-event-post .intro-event-blog .front-blog:hover, .home .program-event-post .intro-event-blog .front-blog:active, .home .program-event-post .intro-event-blog .front-blog:focus {
       border: 2px #000000 solid 4px; }
+      .home .program-event-post .intro-event-blog .front-blog:hover h1, .home .program-event-post .intro-event-blog .front-blog:active h1, .home .program-event-post .intro-event-blog .front-blog:focus h1 {
+        color: #ffffff; }
     @media screen and (min-width: 480px) {
       .home .program-event-post .intro-event-blog .front-blog {
         width: 100%;
@@ -1429,9 +1438,17 @@ object {
   width: 100%;
   border: 4px #000000 solid #ffffff; }
   .home .involve-pillar .involved-join h1 {
-    margin: 0; }
+    margin: 0;
+    text-align: center; }
   .home .involve-pillar .involved-join p {
     display: none; }
+  @media screen and (min-width: 1024px) {
+    .home .involve-pillar .involved-join p {
+      line-height: 120%;
+      text-align: center;
+      display: -ms-flexbox;
+      display: flex;
+      font-size: 18px; } }
   @media screen and (min-width: 480px) {
     .home .involve-pillar .involved-join {
       width: 76%;
@@ -1443,12 +1460,6 @@ object {
       .home .involve-pillar .involved-join h1 {
         padding: 0 60px;
         margin: 0; }
-      .home .involve-pillar .involved-join p {
-        line-height: 120%;
-        text-align: center;
-        display: -ms-flexbox;
-        display: flex;
-        font-size: 18px; }
       .home .involve-pillar .involved-join:hover, .home .involve-pillar .involved-join:active, .home .involve-pillar .involved-join:focus {
         border: 2px #000000 solid 4px; } }
   .home .involve-pillar .involved-join .front-involved {
@@ -1537,18 +1548,20 @@ object {
     -ms-flex-align: center;
         align-items: center;
     -ms-flex-flow: column nowrap;
-        flex-flow: column nowrap; }
+        flex-flow: column nowrap;
+    text-align: center; }
+  @media screen and (min-width: 1024px) {
+    .home .front-join p {
+      display: -ms-flexbox;
+      display: flex;
+      width: 70%;
+      text-align: center; } }
   @media screen and (min-width: 480px) {
     .home .front-join {
       height: 297px;
       width: 43%;
       -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap; }
-      .home .front-join p {
-        display: -ms-flexbox;
-        display: flex;
-        width: 70%;
-        text-align: center; } }
+          flex-flow: column nowrap; } }
 
 /*--------------------------------------------------------------
 # Single-Gallery Page
