--- a/themes/sgsc/sass/_single-gallery.scss
+++ b/themes/sgsc/sass/_single-gallery.scss
@@ -47,14 +47,14 @@
               position: relative;
               overflow: hidden;
               @media screen and (min-width: $mobile_width) {
-                width: $image-d-width;
+                width: 48%;
                 height: 321px;
                 min-width: initial;
                 margin-bottom: 32px;
               }
               img {
                 min-height: 100%;
-                max-height: 150%;
+                max-height: 100%;
                 width: auto;
                 object-fit: cover;
                 min-width: 100%;
@@ -63,7 +63,6 @@
                 transform: translate(-50%, -70%);
                 max-width: none;
                 position: absolute;
-                @media screen and (min-width: $mobile_width) {}
               }
             }
           }
