--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2131,13 +2131,13 @@ object {
             overflow: hidden; }
             @media screen and (min-width: 480px) {
               .single-gallery .content-area .site-main article .entry-content .gallery .thumbnail {
-                width: 496px;
+                width: 48%;
                 height: 321px;
                 min-width: initial;
                 margin-bottom: 32px; } }
             .single-gallery .content-area .site-main article .entry-content .gallery .thumbnail img {
               min-height: 100%;
-              max-height: 150%;
+              max-height: 100%;
               width: auto;
               object-fit: cover;
               min-width: 100%;
