Change img width to % for  responsive design

--- a/themes/sgsc/sass/_archive-gallery.scss
+++ b/themes/sgsc/sass/_archive-gallery.scss
@@ -102,7 +102,7 @@
         margin-top: $margin-d;
         @include border;
         @media screen and (min-width: $mobile_width) {
-          width: $image-d-width;
+          width: 48%;
         }
         .entry-header {
           width: 100%;
@@ -132,6 +132,7 @@
             z-index: 1;
             height: 100%;
             width: 100%;
+            text-align: center;
             display: flex;
             justify-content: center;
             align-items: center;
