--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1951,7 +1951,7 @@ object {
         border: 4px #000000 solid; }
       @media screen and (min-width: 480px) {
         .post-type-archive-gallery .lastest-gallery-section .gallery-album .gallery {
-          width: 496px; } }
+          width: 48%; } }
       .post-type-archive-gallery .lastest-gallery-section .gallery-album .gallery .entry-header {
         width: 100%;
         height: 100%;
@@ -1981,6 +1981,7 @@ object {
           z-index: 1;
           height: 100%;
           width: 100%;
+          text-align: center;
           display: -ms-flexbox;
           display: flex;
           -ms-flex-pack: center;
