--- a/themes/sgsc/sass/_home.scss
+++ b/themes/sgsc/sass/_home.scss
@@ -20,6 +20,11 @@
         @include page-header;
         @include m-donate;
       }
+      article {
+        @media screen and (min-width: $mobile_width) {
+          width: 48%;
+        }
+      }
       article .entry-header {
         width: 100%;
         height: 321px;
@@ -29,9 +34,6 @@
         justify-content: center;
         align-items: center;
         margin-top: 32px;
-        @media screen and (min-width: $mobile_width) {
-          width: $image-d-width;
-        }
         .image-position {
           img {
             min-height: 100%;
