Change img width to % for  responsive design

--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -3106,7 +3106,7 @@ footer {
     width: 100%; }
     @media screen and (min-width: 480px) {
       .page-id-51 .entry-content .contactus {
-        width: 450px; } }
+        width: 38%; } }
   .page-id-51 .entry-content p {
     font-size: 18px; }
   @media screen and (min-width: 480px) {
