--- a/themes/sgsc/sass/_contact-us.scss
+++ b/themes/sgsc/sass/_contact-us.scss
@@ -32,7 +32,7 @@
     padding: $margin-d;
     width: 100%;
     @media screen and (min-width: $mobile_width) {
-      width: 450px;
+      width: 38%;
     }
   }
   p {
