--- a/themes/sgsc/sass/_events.scss
+++ b/themes/sgsc/sass/_events.scss
@@ -138,8 +138,12 @@
 
 	.gallery-widget-img {
 		position: relative;
+		object-fit: cover;
+		margin: 2rem 0px;
+
 		img {
-			object-fit: cover;
+			width: 100%;
+			height: 300px;
 		}
 		a {
 			position: absolute;
@@ -149,7 +153,7 @@
 			text-decoration: none;
 			color: black;
 			background: linear-gradient(hsla(0,0%,100%,.8),hsla(0,0%,100%,.8));
-			padding: 29% 0;
+			padding: 37% 0;
 			font-size: 1.5rem;
 		}
 	}
