--- a/themes/sgsc/sass/_about.scss
+++ b/themes/sgsc/sass/_about.scss
@@ -3,12 +3,14 @@
 }
 
 .about-content h1 {
+  position: relative;
+  bottom: 125px;
   display: flex;
   width: 1024px;
-  height: 140px;
+  height: 125px;
   align-items: center;
   justify-content: center;
-  background-color: rgba(1, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.8);
   margin: 0;
 }
 
