--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2422,15 +2422,17 @@ footer {
   display: none; }
 
 .about-content h1 {
+  position: relative;
+  bottom: 125px;
   display: -ms-flexbox;
   display: flex;
   width: 1024px;
-  height: 140px;
+  height: 125px;
   -ms-flex-align: center;
       align-items: center;
   -ms-flex-pack: center;
       justify-content: center;
-  background-color: rgba(1, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.8);
   margin: 0; }
 
 .about-links {
