--- a/themes/sgsc/sass/_events.scss
+++ b/themes/sgsc/sass/_events.scss
@@ -129,21 +129,23 @@
 	.widget-title {
 		background-color: #45cdcb;
     width: 100%;
-    height: auto;
-    padding: 30% 0;
+    height: 20rem;
+		display: flex;
+		align-items: center;
     text-align: center;
     font-size: 2.25rem;
     line-height: 2.5rem;
+		padding: 0 1rem;
 	}
 
 	.gallery-widget-img {
 		position: relative;
-		object-fit: cover;
 		margin: 2rem 0px;
 
 		img {
 			width: 100%;
 			height: 300px;
+			object-fit: cover;		
 		}
 		a {
 			position: absolute;
@@ -157,15 +159,60 @@
 			font-size: 1.5rem;
 		}
 	}
+	.tribe-events-after-html {
+		display: none;
+	}
 }
 
 @media screen and (min-width: 480px) {
 	.events-archive {
 		.events-title {
 			width: initial;
+			height: 10rem;
 		}
 		.site-content {
 			display: flex;
+			width: 1024px;
+			margin: 0 auto;
+			justify-content: space-between;
+		}
+		#primary {
+			flex: 0 1 60%;
+		}
+		#secondary {
+			flex: 0 1 35%;
+			margin-top: 10.2rem;
+		}
+		.title-events-archive {
+			width: 166.6%;
+		}
+		.tribe-events-page-title {
+			font-size: 2.5rem;
+    	margin: 0;
+		}
+		.event-header {
+			height: 20rem;
+		}
+		.event-bar {
+			width: 2rem;
+		}
+		.widget-title {
+			height: 20rem;
+		}
+		.tribe-events-list-event-title {
+			height: 12.5rem;
+			width: 9.5rem;
+			font-size: 1.5rem;
+			align-items: center;
+			display: flex;
+		}
+		.gallery-widget-img {
+			img {
+				height: 11.6rem;
+			}
+			a {
+				padding: 22% 0;
+			}
 		}
 	}
 }
