--- a/themes/sgsc/sass/_events.scss
+++ b/themes/sgsc/sass/_events.scss
@@ -69,24 +69,41 @@
 		padding: 0;
 	}
 
-	.tribe-events-event-meta span {
+	.tribe-events-event-meta {
 		border: none;
 		background: none;
 		margin: 0;
+		padding: 1rem;
+		font-weight: normal;
+		a {
+			color: black;
+		}
+		a:hover {
+			color: $orange;
+		}
+		a:visited {
+			color: black;
+		}
+	}
+	.tribe-event-schedule-details {
 		padding: 0;
+		font-size: 1.3rem;
 	}
 
 	.tribe-events-venue-details {
 		border: none;
 		margin: 0;
+		padding: 0;
+		font-size: 1rem;
 	}
 	.tribe-events-list .tribe-events-event-cost {
 		float: initial;
 	}
 	.tribe-events-event-cost {
 		clear: both;		
-		margin-left: 3rem;
-    font-size: 1.5rem;
+		margin-left: 1rem;
+    font-size: 1.3rem;
+		display: inline-block;
 		span {
 			padding: 0;
 			display: inline;
@@ -101,6 +118,9 @@
 
 	#tribe-events .tribe-events-content {
 		padding: 0 1rem;
+		p {
+		font-size: 1.1rem;
+		}
 	}
 
 	.tribe-events-sub-nav {
