--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -3198,23 +3198,37 @@ footer {
   border: none;
   padding: 0; }
 
-.events-archive .tribe-events-event-meta span {
+.events-archive .tribe-events-event-meta {
   border: none;
   background: none;
   margin: 0;
-  padding: 0; }
+  padding: 1rem;
+  font-weight: normal; }
+  .events-archive .tribe-events-event-meta a {
+    color: black; }
+  .events-archive .tribe-events-event-meta a:hover {
+    color: #f5a623; }
+  .events-archive .tribe-events-event-meta a:visited {
+    color: black; }
+
+.events-archive .tribe-event-schedule-details {
+  padding: 0;
+  font-size: 1.3rem; }
 
 .events-archive .tribe-events-venue-details {
   border: none;
-  margin: 0; }
+  margin: 0;
+  padding: 0;
+  font-size: 1rem; }
 
 .events-archive .tribe-events-list .tribe-events-event-cost {
   float: initial; }
 
 .events-archive .tribe-events-event-cost {
   clear: both;
-  margin-left: 3rem;
-  font-size: 1.5rem; }
+  margin-left: 1rem;
+  font-size: 1.3rem;
+  display: inline-block; }
   .events-archive .tribe-events-event-cost span {
     padding: 0;
     display: inline; }
@@ -3227,6 +3241,8 @@ footer {
 
 .events-archive #tribe-events .tribe-events-content {
   padding: 0 1rem; }
+  .events-archive #tribe-events .tribe-events-content p {
+    font-size: 1.1rem; }
 
 .events-archive .tribe-events-sub-nav {
   display: -ms-flexbox;
