--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2418,58 +2418,61 @@ footer {
     .copywrite p {
       font-size: 14px; } }
 
-.page-template-page-about .entry-title {
-  display: none; }
+.page-template-page-about .entry-header {
+  max-width: 480px;
+  margin: 0 auto;
+  height: 305px;
+  position: relative; }
+  @media screen and (min-width: 480px) {
+    .page-template-page-about .entry-header {
+      max-width: 1024px;
+      height: 353px; } }
+  .page-template-page-about .entry-header img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    z-index: -1; }
+  .page-template-page-about .entry-header h1 {
+    margin: 0;
+    position: absolute;
+    bottom: 0px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+        justify-content: center;
+    width: 100%;
+    padding: 34px 0;
+    background: rgba(255, 255, 255, 0.8); }
 
-.about-content h1 {
-  position: relative;
-  bottom: 125px;
-  display: -ms-flexbox;
-  display: flex;
-  width: 1024px;
-  height: 125px;
-  -ms-flex-align: center;
-      align-items: center;
-  -ms-flex-pack: center;
-      justify-content: center;
-  background-color: rgba(255, 255, 255, 0.8);
-  margin: 0; }
-
-.about-links {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap; }
-
-.about-content a {
-  color: #000000;
-  text-decoration: none; }
-
-.about-header {
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  height: 194px; }
-
-.about-links p {
-  background: #f5a623;
-  width: 417px;
-  height: 150px;
-  border: 4px solid #f5a623;
-  text-align: center;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center;
-  -ms-flex-align: center;
-      align-items: center;
-  margin: 63px 0 0 0; }
-  .about-links p:nth-child(even) {
-    margin-left: 63px;
-    margin-right: 31.5px; }
-  .about-links p:nth-child(odd) {
-    margin-right: 63px;
-    margin-left: 31.5px; }
+@media all and (min-width: 480px) {
+  .about-links {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+  .entry-content a {
+    color: #000000;
+    text-decoration: none; }
+  .about-links p {
+    background: #f5a623;
+    width: 417px;
+    height: 150px;
+    border: 4px solid #f5a623;
+    text-align: center;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center;
+    margin: 63px 0 0 0; }
+    .about-links p:nth-child(even) {
+      margin-left: 63px;
+      margin-right: 31.5px; }
+    .about-links p:nth-child(odd) {
+      margin-right: 63px;
+      margin-left: 31.5px; } }
 
 .program-hero {
   height: 19rem;
@@ -2629,7 +2632,7 @@ footer {
 #post-18 {
   margin: 0; }
 
-.entry-header {
+.page-template-page-join-us .entry-header {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
@@ -2648,9 +2651,9 @@ footer {
   min-height: 118px;
   color: #000000; }
   @media screen and (min-width: 480px) {
-    .entry-header {
+    .page-template-page-join-us .entry-header {
       min-height: 160px; } }
-  .entry-header .donate-btn {
+  .page-template-page-join-us .entry-header .donate-btn {
     background-color: #F91E72;
     position: absolute;
     bottom: 0;
@@ -2665,34 +2668,34 @@ footer {
     height: 2.3rem;
     width: 2.3rem; }
     @media screen and (min-width: 480px) {
-      .entry-header .donate-btn {
+      .page-template-page-join-us .entry-header .donate-btn {
         height: 5rem;
         width: 5rem; } }
-    .entry-header .donate-btn a {
+    .page-template-page-join-us .entry-header .donate-btn a {
       text-decoration: none;
       color: #000000;
       font-size: 1rem; }
       @media screen and (min-width: 480px) {
-        .entry-header .donate-btn a {
+        .page-template-page-join-us .entry-header .donate-btn a {
           font-size: 4rem; } }
-      .entry-header .donate-btn a i {
+      .page-template-page-join-us .entry-header .donate-btn a i {
         font-weight: lighter;
         padding: .5rem;
         color: #000000; }
-        .entry-header .donate-btn a i:hover {
+        .page-template-page-join-us .entry-header .donate-btn a i:hover {
           color: #f5a623; }
-      .entry-header .donate-btn a p {
+      .page-template-page-join-us .entry-header .donate-btn a p {
         display: none; }
-  .entry-header .entry-meta {
+  .page-template-page-join-us .entry-header .entry-meta {
     display: none; }
 
-.entry-title {
+.page-template-page-join-us .entry-title {
   margin: auto; }
 
-.entry-content {
+.page-template-page-join-us .entry-content {
   margin: 0; }
 
-.join-us-section {
+.page-template-page-join-us .join-us-section {
   display: -ms-flexbox;
   display: flex;
   margin: 0 auto;
@@ -2706,7 +2709,7 @@ footer {
   padding-bottom: 21px;
   background-position: 60%; }
 
-.rectangle {
+.page-template-page-join-us .rectangle {
   height: 208px;
   max-width: 480px;
   box-sizing: border-box;
@@ -2716,13 +2719,13 @@ footer {
   text-decoration: none;
   background-color: rgba(255, 255, 255, 0.8);
   border: 4px solid rgba(255, 255, 255, 0); }
-  .rectangle:hover {
+  .page-template-page-join-us .rectangle:hover {
     border: 4px solid #000000; }
 
-.new-member,
-.membership-renewal,
-.volunteer,
-.rectangle {
+.page-template-page-join-us .new-member,
+.page-template-page-join-us .membership-renewal,
+.page-template-page-join-us .volunteer,
+.page-template-page-join-us .rectangle {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
@@ -2730,13 +2733,13 @@ footer {
   -ms-flex-align: center;
       align-items: center; }
 
-.new-member,
-.membership-renewal,
-.volunteer {
+.page-template-page-join-us .new-member,
+.page-template-page-join-us .membership-renewal,
+.page-template-page-join-us .volunteer {
   margin-top: 21px; }
-  .new-member h2,
-  .membership-renewal h2,
-  .volunteer h2 {
+  .page-template-page-join-us .new-member h2,
+  .page-template-page-join-us .membership-renewal h2,
+  .page-template-page-join-us .volunteer h2 {
     font-family: montserrat, merriweather, sans-serif;
     font-size: 16px;
     color: #000000;
@@ -2753,13 +2756,13 @@ footer {
     -ms-flex-align: center;
         align-items: center; }
 
-.rectangle p {
+.page-template-page-join-us .rectangle p {
   display: none; }
 
 @media all and (min-width: 600px) {
-  .entry-header {
+  .page-template-page-join-us .entry-header {
     width: 1024px; }
-  .join-us-section {
+  .page-template-page-join-us .join-us-section {
     display: -ms-flexbox;
     display: flex;
     padding-bottom: initial;
@@ -2773,18 +2776,18 @@ footer {
     -ms-flex-direction: row;
         flex-direction: row;
     background-size: 100%; }
-  .rectangle {
+  .page-template-page-join-us .rectangle {
     margin-top: initial;
     height: 356px;
     box-sizing: border-box;
     width: 300px;
     background-color: rgba(255, 255, 255, 0.8);
     border: 4px solid rgba(255, 255, 255, 0); }
-    .rectangle:hover {
+    .page-template-page-join-us .rectangle:hover {
       border: 4px solid #000000; }
-  .new-member h2,
-  .membership-renewal h2,
-  .volunteer h2 {
+  .page-template-page-join-us .new-member h2,
+  .page-template-page-join-us .membership-renewal h2,
+  .page-template-page-join-us .volunteer h2 {
     font-family: montserrat, merriweather, sans-serif;
     font-size: 24px;
     width: 163px;
@@ -2793,9 +2796,9 @@ footer {
     text-align: center;
     padding-bottom: 11px;
     line-height: 29px; }
-  .new-member p,
-  .membership-renewal p,
-  .volunteer p {
+  .page-template-page-join-us .new-member p,
+  .page-template-page-join-us .membership-renewal p,
+  .page-template-page-join-us .volunteer p {
     font-family: lato, novecentosanswide, sans-serif;
     font-size: 18px;
     color: black;
@@ -2803,7 +2806,7 @@ footer {
     margin: auto;
     margin-top: 11px;
     line-height: 22px; }
-  .rectangle p {
+  .page-template-page-join-us .rectangle p {
     display: initial; } }
 
 .volunteer-post {
