--- a/themes/sgsc/sass/_about.scss
+++ b/themes/sgsc/sass/_about.scss
@@ -1,17 +1,51 @@
-.page-template-page-about .entry-title {
-  display: none;
+.page-template-page-about {
+
+.entry-header {
+  max-width: 480px;
+  margin: 0 auto;
+  height: 305px;  
+  position: relative;
+  @media screen and (min-width: 480px) {
+    max-width: 1024px;
+    height: 353px; 
+  }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    z-index: -1;
+  }
+  h1 {
+    margin: 0;
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 34px 0;
+    background: rgba(255,255,255,0.8);
+  }
+}
 }
 
-.about-content h1 {
-  position: relative;
-  bottom: 125px;
-  display: flex;
-  width: 1024px;
-  height: 125px;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(255, 255, 255, 0.8);
-  margin: 0;
+@media all and (min-width: 480px) {
+
+.page-template-page-about {
+.entry-header {
+ 
+  // h1 {
+  //   margin: 0;
+  //   position: absolute;
+  //   bottom: 0px;
+  //   display: flex;
+  //   justify-content: center;
+  //   width: 100%;
+  //   margin: 0 auto;
+  //   padding: 34px 0;
+  //   background: rgba(255,255,255,0.8);
+  // }
+}
 }
 
 .about-links {
@@ -19,15 +53,9 @@
   flex-wrap: wrap;
 }
 
-.about-content a {
+.entry-content a {
   color: $black;
   text-decoration: none;
-}
-
-.about-header {
-  display: flex;
-  width: 100%;
-  height: 194px;
 }
 
 .about-links p {
@@ -48,4 +76,5 @@
     margin-right: 63px;
     margin-left: 31.5px;
   }
+}
 }
