styling about page

--- a/themes/sgsc/sass/_about.scss
+++ b/themes/sgsc/sass/_about.scss
@@ -34,17 +34,17 @@
 .page-template-page-about {
 .entry-header {
  
-  // h1 {
-  //   margin: 0;
-  //   position: absolute;
-  //   bottom: 0px;
-  //   display: flex;
-  //   justify-content: center;
-  //   width: 100%;
-  //   margin: 0 auto;
-  //   padding: 34px 0;
-  //   background: rgba(255,255,255,0.8);
-  // }
+  h1 {
+    margin: 0;
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 0 auto;
+    padding: 34px 0;
+    background: rgba(255,255,255,0.8);
+  }
 }
 }
 
