--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -834,12 +834,10 @@ a {
   clear: both;
   margin: 0 0 1.5rem; }
 
-.container {
-  min-width: 320px; }
-  @media (min-width: 1024px) {
-    .container {
-      width: 1024px;
-      margin: auto; } }
+@media (min-width: 1024px) {
+  .container {
+    min-width: 1024px;
+    margin: auto; } }
 
 /* Asides */
 .blog .format-aside .entry-title,
@@ -2617,11 +2615,21 @@ footer {
 .programs {
   margin-top: 1rem; }
 
-.tax-program-type .program-hero {
+.tax-program-type .header {
   position: relative; }
 
+.tax-program-type .entry-header {
+  height: 7.3rem;
+  background-color: #f5a623;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center; }
+
 .tax-program-type .donate-btn {
-  bottom: -7.4rem; }
+  bottom: 0; }
 
 .tax-program-type .program-grid {
   list-style: none;
@@ -2630,10 +2638,61 @@ footer {
   margin-top: 2rem; }
 
 .tax-program-type .program-img {
-  text-align: center; }
+  background-color: #45cdcb;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: center;
+      justify-content: center; }
 
 .tax-program-type .program-info {
-  padding: 1.5rem; }
+  padding: 0 1.5rem;
+  font-family: lato, novecentosanswide, sans-serif;
+  margin: 1.5rem 0; }
+  .tax-program-type .program-info p {
+    font-size: 1rem; }
+
+.tax-program-type .program-meta p {
+  margin: 0; }
+
+.tax-program-type h5 {
+  font-family: lato, novecentosanswide, sans-serif;
+  margin: 0;
+  font-size: 1.6rem; }
+
+.tax-program-type .calendar-program {
+  padding: 1rem;
+  padding-bottom: 0; }
+  .tax-program-type .calendar-program p {
+    font-size: 1rem; }
+  .tax-program-type .calendar-program h2 {
+    font-size: 1.5rem; }
+
+.tax-program-type .program-back-btn p {
+  border: solid 2px black;
+  width: 6rem;
+  height: 2rem;
+  margin-left: 1rem;
+  -ms-flex-align: center;
+      align-items: center;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  font-family: montserrat, merriweather, sans-serif;
+  font-size: 1.1rem; }
+  .tax-program-type .program-back-btn p:hover {
+    background-color: #f5a623;
+    border-color: #f5a623; }
+
+.tax-program-type .program-back-btn a {
+  color: black;
+  text-decoration: none; }
+  .tax-program-type .program-back-btn a:visited {
+    color: black; }
+  .tax-program-type .program-back-btn a:hover {
+    color: white; }
 
 @media screen and (min-width: 480px) {
   .page-template-page-programs .donate-btn {
