--- a/themes/sgsc/sass/_about-sub.scss
+++ b/themes/sgsc/sass/_about-sub.scss
@@ -1,35 +1,36 @@
-.page-template-page-about {
+.page-template-page-about-sub {
 
 .entry-header {
   max-width: 480px;
   margin: 0 auto;
-  height: 305px;  
+  height: 275px;  
   position: relative;
   @media screen and (min-width: 480px) {
     max-width: 1024px;
-    height: 353px; 
+    height: 375px; 
   }
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: 65% 0%;
     position: absolute;
     z-index: -1;
   }
-  h1 {
+}
+
+.entry-title {
     margin: 0;
     position: absolute;
     bottom: 0px;
     display: flex;
+    align-items: center;
     justify-content: center;
     width: 100%;
-    padding: 34px 0;
-    background: rgba(255,255,255,0.81);
+    height: 118px;
+    // padding: 34px 0;
+    background: $orange;
   }
-
-
-
-}
 
 .entry-content a {
   color: $black;
@@ -62,7 +63,7 @@
 
 @media all and (min-width: 480px) {
 
-.page-template-page-about {
+.page-template-page-about-sub {
 
 }
 
