--- a/themes/sgsc/sass/_about.scss
+++ b/themes/sgsc/sass/_about.scss
@@ -13,6 +13,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: 65% 0%;
     position: absolute;
     z-index: -1;
   }
