--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -68,6 +68,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "single-gallery";
 @import "footer";
 @import "about";
+@import "about-sub";
 @import "programs";
 @import "join-us";
 @import "single-volunteer";
