--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2428,6 +2428,7 @@ footer {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: 65% 0%;
     position: absolute;
     z-index: -1; }
   .page-template-page-about .entry-header h1 {
@@ -2495,6 +2496,93 @@ footer {
       margin-left: 63px;
       margin-right: 31.5px; }
     .page-template-page-about .about-links p:nth-child(odd) {
+      margin-right: 63px;
+      margin-left: 31.5px; } }
+
+.page-template-page-about-sub .entry-header {
+  max-width: 480px;
+  margin: 0 auto;
+  height: 275px;
+  position: relative; }
+  @media screen and (min-width: 480px) {
+    .page-template-page-about-sub .entry-header {
+      max-width: 1024px;
+      height: 375px; } }
+  .page-template-page-about-sub .entry-header img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 65% 0%;
+    position: absolute;
+    z-index: -1; }
+
+.page-template-page-about-sub .entry-title {
+  margin: 0;
+  position: absolute;
+  bottom: 0px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  width: 100%;
+  height: 118px;
+  background: #f5a623; }
+
+.page-template-page-about-sub .entry-content a {
+  color: #000000;
+  text-decoration: none; }
+
+.page-template-page-about-sub .about-links {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: center;
+      justify-content: center; }
+  .page-template-page-about-sub .about-links p {
+    background: #f5a623;
+    width: 277px;
+    height: 96px;
+    border: 4px solid #f5a623;
+    text-align: center;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center;
+    margin: 32px 0 0 0;
+    font-family: montserrat, merriweather, sans-serif;
+    font-size: 22px; }
+
+.page-template-page-about-sub .about-links p:hover {
+  border: 4px solid #000000; }
+
+@media all and (min-width: 480px) {
+  .page-template-page-about-sub .about-links {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+  .page-template-page-about-sub .about-links p {
+    background: #f5a623;
+    width: 417px;
+    height: 150px;
+    border: 4px solid #f5a623;
+    text-align: center;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center;
+    margin: 63px 0 0 0; }
+    .page-template-page-about-sub .about-links p:nth-child(even) {
+      margin-left: 63px;
+      margin-right: 31.5px; }
+    .page-template-page-about-sub .about-links p:nth-child(odd) {
       margin-right: 63px;
       margin-left: 31.5px; } }
 
