--- a/themes/sgsc/sass/_about-our-team.scss
+++ b/themes/sgsc/sass/_about-our-team.scss
@@ -1,4 +1,4 @@
-.page-template-page-about-sub {
+.page-template-page-about-our-team {
 
 .entry-header {
   max-width: 480px;
@@ -15,7 +15,6 @@
     object-fit: cover;
     object-position: 65% 0%;
     position: absolute;
-    z-index: -1;
   }
 }
 
@@ -28,13 +27,12 @@
     justify-content: center;
     width: 100%;
     height: 118px;
-    // padding: 34px 0;
     background: $orange;
   }
 
-.entry-content a {
-  color: $black;
-  text-decoration: none;
+.entry-content p {
+    margin: 15px 22px;
+    text-indent: 15px;
 }
 
 
@@ -63,7 +61,7 @@
 
 @media all and (min-width: 480px) {
 
-.page-template-page-about-sub {
+.page-template-page-about-our-team {
 
 }
 
