--- a/themes/sgsc/sass/_about.scss
+++ b/themes/sgsc/sass/_about.scss
@@ -13,7 +13,6 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: 65% 0%;
     position: absolute;
     z-index: -1;
   }
@@ -42,6 +41,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  max-width: 1024px;
+  margin: auto;
   p {
     background: $orange;
     width: 277px;
