--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2871,7 +2871,34 @@ footer {
 @media screen and (min-width: 480px) {
   .page-template-page-programs .donate-btn {
     height: 4.5rem;
-    width: 4.5rem; } }
+    width: 4.5rem;
+    font-size: 2.5rem; }
+  .tax-program-type .donate-btn {
+    height: 4.5rem;
+    width: 4.5rem;
+    font-size: 2.5rem; }
+  .tax-program-type .content-area {
+    width: 1024px;
+    margin: auto; }
+  .tax-program-type .program-grid {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: justify;
+        justify-content: space-between; }
+    .tax-program-type .program-grid li {
+      -ms-flex: 0 1 47%;
+          flex: 0 1 47%; }
+  .tax-program-type .entry-header {
+    height: 10rem; }
+  .tax-program-type .program-img {
+    height: 17rem; }
+    .tax-program-type .program-img img {
+      height: 100%;
+      width: auto; }
+  .tax-program-type .program-back-btn {
+    display: none; } }
 
 #post-18 {
   margin: 0; }
