--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -3597,6 +3597,10 @@ footer {
   .events-archive .events-title {
     width: initial;
     height: 10rem; }
+  .events-archive .donate-btn {
+    height: 4.5rem;
+    width: 4.5rem;
+    font-size: 2.5rem; }
   .events-archive .site-content {
     display: -ms-flexbox;
     display: flex;
@@ -3610,7 +3614,7 @@ footer {
   .events-archive #secondary {
     -ms-flex: 0 1 35%;
         flex: 0 1 35%;
-    margin-top: 10.2rem; }
+    margin-top: 11.6rem; }
   .events-archive .title-events-archive {
     width: 166.6%; }
   .events-archive .tribe-events-page-title {
@@ -3637,9 +3641,12 @@ footer {
   .events-archive .tribe-events-event-meta {
     margin-left: 3rem;
     font-size: 1.6rem;
-    font-weight: 500; }
+    font-weight: 500;
+    padding-left: 0; }
   .events-archive #tribe-events .tribe-events-content {
-    padding: 0 0 0 3rem; } }
+    padding: 0 0 0 3rem; }
+  .events-archive .tribe-events-event-cost {
+    margin-left: 3rem; } }
 
 /*--------------------------------------------------------------
 # Single-Page
